(fix) O3-5722: Increase visit summary tab min-height to prevent content clipping (#3352)

--- a/packages/esm-patient-chart-app/src/visit/visits-widget/past-visits-components/visit-summary.scss
+++ b/packages/esm-patient-chart-app/src/visit/visits-widget/past-visits-components/visit-summary.scss
@@ -24,7 +24,7 @@
   padding: layout.$spacing-05;
 
   :global(.cds--tabs) {
-    min-height: 12rem;
+    min-height: 13rem;
   }
 }
 
